D:/Program Files (x86)/Git/visits get added, and visit changed to visits in route
